# shooting_game

./: Cargo.toml  README.md  client.sh  communication_protocol.md
src/: common.rs
src/client/: main.rs  math.rs  player.rs
src/server/: main.rs
